# ImprovedIBM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analytical_solution.py  mintty.exe.stackdump  run_release.sh
cmake/: ExternalDeps.cmake  macros.cmake
ibm_application/: CMakeLists.txt
ibm_application/include/data_viewer/: Camera.h  DataViewer.h  MatrixObject.h  Mesh.h  Shader.h  SolutionModel.h
ibm_application/include/ibm_application/: CartGrid.h  DataExporter.h  DataStructs.h  DataViewer.h  GeometrySDF.h  RichardsonMethod.h  SDLGraphics.h  Schemes.h  Solver.h  ibm_application.h
ibm_application/src/data_viewer/: Camera.cpp  DataViewer.cpp  MatrixObject.cpp  Mesh.cpp  Shader.cpp  SolutionModel.cpp
ibm_application/src/ibm_application/: CartGrid.cpp  DataExporter.cpp  DataViewer.cpp  GeometrySDF.cpp  RichardsonMethod.cpp  SDLGraphics.cpp  Schemes.cpp  Solver.cpp  ibm_application.cpp
ibm_application/src/shaders/: MatrixViewer.frag  MatrixViewer.vert
scripts/: analytical.m  analytical_surface.m  case_setup_plot.py  converged_result.csv  data_export.csv  dirichlet_data.csv  example_2.h5  first_data.csv  neumann_data.csv  surface_plot.py  view_surface.m
scripts/figures/: local_accuracy_location.py  test_case_figure.py
scripts/matlab/: analytical_example.m  analytical_value.m  analyze_global_scheme_order.m  analyze_local_scheme_order.m  analyze_scheme_order.asv  analyze_scheme_order.m  boundary_error.m  contour_plots.m  cover_page_plot.m  front_page_cover_mesh.m  ibm_mesh_plot.m  improved_ibm_mesh_plot.m  residuals.m  view_mesh.asv  view_mesh.m
scripts/matlab/functions/: analytical_mesh.m  analytical_solver.m  analytical_transient_mesh.m  analytical_transient_solution.m  analytical_value.m  crop_boundaries.m  load_steady_state_solution.m  meshgrid_from_mesh.m
scripts/matlab/transient/: bessel_stuff_matlab.py  run_python.m  view_transient_mesh.m
scripts/python/: bessel_stuff.py  transient_re.py
